Resolves #115, changed donors visuals, also fixed actions box height.
Added a new logic to deal with donors visuals (hidden by default and
shown after clicking on action image). Also added visual fixes for both
Challenge and Donors, provided that one of those is being used.

--- a/ov_challenge/css/ov_challenge.css
+++ b/ov_challenge/css/ov_challenge.css
@@ -122,3 +122,9 @@
   color: #999;
   font-size: 95%;
 }
+
+.h5p-content ul.h5p-actions {
+    box-sizing: content-box;
+    height: auto;
+    display: flow-root;
+}
